@@ -2,6 +2,7 @@
 
 * Fixed paper editor widget
 * Fixed position of paper size widget
+* Hide geometry widgets at startup if paper selected
 
 
 1.2.1 (12.01.2014):
